@@ -1,3 +1,10 @@
+2006-04-18  Bart Oldeman  <bartoldeman@users.sf.net>
+
+	* lib/test.c: Fix typo in #inlcude.
+	* include/aclui.h: INTERFACE should not remain
+	defined at the end of the header.
+	* include/servprov.h: Ditto.
+
 2006-04-16  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/ws2tcpip.h (gai_strerror): Add thread-safety comment.
